Feature(DetailsNew): Настроил экран детального описания новости
-Настроил сохранение позиций прокрутки
-Сделал отображение данных на экране детального описание
-Сделал отправку ссылки на новость

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,21 @@
     <string name="network_error">Нет интернет соединения</string>
     <string name="server_error">Ошибка с сервером, попробуйте позже</string>
 
+    <string-array name="months_genitive">
+        <item>Января</item>
+        <item>Февраля</item>
+        <item>Марта</item>
+        <item>Апреля</item>
+        <item>Мая</item>
+        <item>Июня</item>
+        <item>Июля</item>
+        <item>Августа</item>
+        <item>Сентября</item>
+        <item>Октября</item>
+        <item>Ноября</item>
+        <item>Декабря</item>
+    </string-array>
+
     <!--News-->
     <string name="news_title">Лента</string>
 
